--- a/packages/list/src/helperComponents/ItemContent/styles.module.scss
+++ b/packages/list/src/helperComponents/ItemContent/styles.module.scss
@@ -25,7 +25,6 @@ $typography: (
 
 .headline {
   display: flex;
-  align-items: center;
 }
 
 .label {
@@ -58,6 +57,9 @@ $typography: (
       }
       .label {
         @include composite-var($typography, $size, 'label');
+
+        display: flex;
+        align-items: center;
       }
       .caption {
         @include composite-var($typography, $size, 'caption');
